--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "firebase": "^8.8.1",
     "i18next": "^20.3.5",
     "i18next-browser-languagedetector": "^6.1.2",
+    "parse-full-name": "^1.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/parse-full-name": "^1.2.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "typescript": "^4.3.5"
