--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parse-full-name": "^1.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-i18next": "^11.11.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
