--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-i18next": "^11.11.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "recoil": "^0.4.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -56,6 +58,7 @@
     "@types/parse-full-name": "^1.2.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-slick": "^0.23.5",
     "serve": "^12.0.0",
     "typescript": "^4.3.5"
   }
