--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/core": "^2.11.0",
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
@@ -17,7 +18,9 @@
     "firebase": "^8.8.1",
     "i18next": "^20.3.5",
     "i18next-browser-languagedetector": "^6.1.2",
+    "moment": "^2.29.1",
     "parse-full-name": "^1.2.5",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
